cluster/longhorn-system/longhorn/vs-longhorn.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations:
    external-dns.alpha.kubernetes.io/target: 10.45.10.20
spec:
  hosts:
    - 'longhorn.holthome.net'
  gateways:
    - istio-system/istio-system-ingress-gateway
  http:
    - match:
        - port: 443
      route:
        - destination:
            port:
              number: 80
            host: longhorn-frontend.longhorn-system.svc.cluster.local
